--- a/Index.html
+++ b/Index.html
@@ -118,11 +118,11 @@
                       placeholder="Type a message..."
                       required
                     />
-                    <!-- <div class="svg-chevron">
+                    <div class="svg-chevron">
                       <svg xmlns="http://www.w3.org/2000/svg" class="svg-relative" width="16" height="20" fill="white" stroke="white" stroke-width="1" class="bi bi-chevron-right" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
                       </svg>
-                    </div> -->
+                    </div>
                   </form>
               </div>
               </div>
